# AutWinmill

./: .gitignore  .gitleaks.toml  DOCUMENTATION.md  Makefile  PLAN_REFACTOR_ELITE.md  README.md  SDK_INTEGRATION.md  SECRET_MANAGEMENT_SYSTEM.md  package-lock.json  package.json  pyproject.toml  run-dashboard-auto.py  setup.py  sonar-project.properties  verify_refactor.py  wmctl.py
.github/workflows/: cd-pipeline.yml  ci.yml  deploy_vps.yml  performance.yml
apps/operator_console/: Dockerfile  requirements.txt
aut_windmill/: README-CYN-ECOSYSTEM.md  README.md  check_system.py  inbound_webhook.flow.yaml  pyproject.toml  table_list.txt  test_basico.py  test_simple.ps1  update_acls.sql  verify_tables.sql  wmill.yaml
aut_windmill/contracts/: README.md
aut_windmill/docs/: cuestionario-assessment-enterprise.md  cuestionario-discovery-comercial.md  cuestionario-implementacion.md  guia-uso-cuestionarios.md
aut_windmill/f/: payment_dashboard.py
aut_windmill/flows/: dlq_requeue.yaml  einstein_kids_ai_agent.yaml  einstein_kids_calendly_webhook.yaml  einstein_kids_moms_funnel.yaml  einstein_kids_zoom_webhook.yaml
aut_windmill/ops/: ARQUITECTURA-MULTICLIENTE.md  README-CREDENTIALS.md  README-CYN.md  create-cyn-credentials.sh  docker-compose-cyn.yml  docker-compose-saas-control.yml  docker-compose.yml  start-cyn-ecosystem.sh
aut_windmill/scripts_yaml/: M10_pre_event_sequence.yaml  M20_no_show_sequence.yaml  job_runner_cron.yaml  normalize_phone.yaml  schedule_jobs.yaml  ycloud_send_template.yaml  ycloud_webhook_inbound.yaml
aut_windmill/tests/: conftest.py
contracts/: registry.json
contracts/einstein_kids/: lead_optin.schema.json
contracts/examples/: order_created.valid.json  payment_captured.valid.json
docs/: ManualOperacion.md  README.md
docs/adr/: ADR-0001-jsonschema-vs-pydantic.md
docs/benchmarks/: PLAN_CAPACIDAD.md
docs/ieee/: STD.md
docs/platform/: BILLING_SYSTEM.md  MONITORING_SYSTEM.md
docs/runbooks/: CONFIGURAR-SISTEMA.bat  CREDENCIALES-SISTEMA.txt  SISTEMA-FUNCIONANDO.txt
f/: payment_control_system.py
f/einstein_kids/: simulate_full_flow.py
flows/: README.md  einstein_kids_webhook_inbound.yaml  mvp_ingesta_validacion_orquestacion.yaml
ops/: .env.client.example  .env.cyn.example  .env.developer.example  CYN-SETUP-FINAL.md  README.md  docker-compose-cyn.yml  docker-compose-infraestructure.yml  docker-compose.yml  recover-infrastructure.sh  saas-control-manager.sh  start-cyn-ecosystem.sh
ops/benchmarks/: generate_report.py
ops/deploy/: .env.cyn.vps.example  .env.operator-console.example  .env.operator-console.vps.example  CHECKLIST_DEPLOY.md  VPS_GO_LIVE.md  backup_pg.sh  operator-console.compose.yml  operator-console.vps.compose.yml  preflight_vps.sh  (+1 more)
resources/: README.md  env.example
scripts/: deploy.sh  run_benchmarks.ps1
scripts_yaml/: M21_attendee_closing.yaml  T10_pre_event_sequence.yaml  T21_attendee_closing.yaml  cancel_jobs.yaml  compute_attendance.yaml  payment_claim_create.yaml  payment_claim_decide.yaml  upsert_lead.yaml  ycloud_webhook_status.yaml
tests/: conftest.py
tools/: deploy_scripts.js  gen_yamls.js  run-dashboard-manual.py  verificar-sistema.py  verificar_simple.py
(+158 files in other folders)
